--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,6 +5,7 @@
 .headline-wrapper--contact {
   display: flex;
   align-items: center;
+  gap: 32px;
 }
 
 .contact-line {
@@ -13,6 +14,7 @@
 
 .contact-content-wrapper {
   display: flex;
+  /* justify-content: space-between; */
   gap: 150px;
   padding: 0 var(--content-limitation-lr);
 }
@@ -25,6 +27,10 @@
   font-weight: 700;
   font-size: 32px;
   margin-bottom: var(--space-m);
+}
+
+.contact-content-first {
+  flex: 1;
 }
 
 .contact-content-second {
@@ -148,7 +154,8 @@
 
 /* #region responsive */
 @media screen and (max-width: 1280px) {
-  .contact-section {
+  .headline-wrapper--contact {
+    gap: 4px;
   }
 
   .contact-content-wrapper {
@@ -181,6 +188,10 @@
 
   .contact-line {
     width: var(--content-limitation-lr);
+  }
+
+  .contact-content-second {
+    margin-bottom: 48px;
   }
 }
 
